Доделал основную структуру, осталось подогнать кроссбраузерность

--- a/index.html
+++ b/index.html
@@ -148,5 +148,52 @@
 
       </div>
     </div>
+    <!-- подвал -->
+    <footer>
+      <div>
+        <span class="title_footer">Contact Us</span>
+        <span>
+        Company Name<br>
+        Street Name & Number<br>
+        Town<br>
+        Postcode/Zip<br>
+        Tel: xxxxx xxxxxxxxxx<br>
+        Fax: xxxxx xxxxxxxxxx<br>
+        Email: contact@mydomain.com
+      </span>
+      </div>
+
+      <div>
+        <span class="title_footer">Quick Links</span>
+        <a href="#">Link Text Here</a><hr>
+        <a href="#">Link Text Here</a><hr>
+        <a href="#">Link Text Here</a><hr>
+        <a href="#">Link Text Here</a><hr>
+      </div>
+
+      <div>
+        <span class="title_footer">From The Blog</span>
+        <span>
+          <b>Blog Post Title</b><br>
+          Posted by Admin on 00.00.0000<br>
+          <span style="display: block;margin-top: 12px;margin-bottom: 12px;">Vestibulumaccumsan egestibulum eu justo convallis augue estas aenean elit intesque sed facilispede estibulum.</span>
+          <span style="display: block;text-align: right;"><a id="read_more" href="#">Read More »</a></span>
+        </span>
+      </div>
+
+      <div>
+        <span class="title_footer">Grab Our Newsletter</span>
+        <form class="newsletter" action="" method="post">
+          <input type="text" name="name" value="Name">
+          <input type="email" name="email" value="Email">
+          <button type="send" name="button">SUBMIT</button>
+        </form>
+      </div>
+    </footer>
+    <!-- авторское право -->
+    <div class="copyright">
+      <span>Copyright © 2013 - All Rights Reserved - Domain Name</span>
+      <span style="text-align: right;">Made by GLAZOVSKI</span>
+    </div>
   </body>
 </html>
