исправление ошибок валидации

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Шапка -->
     <header>
       <div class="search">
-        <form action="" method="post" style="display: contents;">
+        <form action="#" method="post" style="display: contents;">
           <div class="input_form">
             <input type="text" name="search" value="Search Term Here">
             <button type="send" name="button">
@@ -46,7 +46,7 @@
         <img src="img/service.jpg" alt="img" width="100" height="100">
         <span>
           <span>Service 1</span>
-          <div></div>
+          <hr>
           Nullamlacus dui ipsum cons eque loborttis non euisque morbi penas dapi bulum.
         </span>
       </div>
@@ -55,7 +55,7 @@
         <img src="img/service.jpg" alt="img" width="100" height="100">
         <span>
           <span>Service 2</span>
-          <div></div>
+          <hr>
           Nullamlacus dui ipsum cons eque loborttis non euisque morbi penas dapi bulum.
         </span>
       </div>
@@ -64,7 +64,7 @@
         <img src="img/service.jpg" alt="img" width="100" height="100">
         <span>
           <span>Service 3</span>
-          <div></div>
+          <hr>
           Nullamlacus dui ipsum cons eque loborttis non euisque morbi penas dapi bulum.
         </span>
       </div>
@@ -76,7 +76,7 @@
 
         <div class="el_latest_work">
           <div style="display:grid;">
-            <img src="img/latest_work.jpg" alt="" width="300p" height="170">
+            <img src="img/latest_work.jpg" alt="изображение" width="300" height="170">
               <div class="title_latest_work">
                 <span>
                   Image Name or Title<br>
@@ -88,7 +88,7 @@
 
         <div class="el_latest_work">
           <div style="display:grid;">
-            <img src="img/latest_work.jpg" alt="" width="300p" height="170">
+            <img src="img/latest_work.jpg" alt="изображение" width="300" height="170">
               <div class="title_latest_work">
                 <span>
                   Image Name or Title<br>
@@ -100,7 +100,7 @@
 
         <div class="el_latest_work">
           <div style="display:grid;">
-            <img src="img/latest_work.jpg" alt="" width="300p" height="170">
+            <img src="img/latest_work.jpg" alt="изображение" width="300" height="170">
               <div class="title_latest_work">
                 <span>
                   Image Name or Title<br>
@@ -112,7 +112,7 @@
 
         <div class="el_latest_work">
           <div style="display:grid;">
-            <img src="img/latest_work.jpg" alt="" width="300p" height="170">
+            <img src="img/latest_work.jpg" alt="изображение" width="300" height="170">
               <div class="title_latest_work">
                 <span>
                   Image Name or Title<br>
@@ -124,7 +124,7 @@
 
         <div class="el_latest_work">
           <div style="display:grid;">
-            <img src="img/latest_work.jpg" alt="" width="300p" height="170">
+            <img src="img/latest_work.jpg" alt="изображение" width="300" height="170">
               <div class="title_latest_work">
                 <span>
                   Image Name or Title<br>
@@ -136,7 +136,7 @@
 
         <div class="el_latest_work">
           <div style="display:grid;">
-            <img src="img/latest_work.jpg" alt="" width="300p" height="170">
+            <img src="img/latest_work.jpg" alt="изображение" width="300" height="170">
               <div class="title_latest_work">
                 <span>
                   Image Name or Title<br>
@@ -151,12 +151,14 @@
     <!-- подвал -->
     <footer>
       <div>
-        <span class="title_footer">Contact Us</span>
+        <h4 class="title_footer">Contact Us</h4>
         <span>
-        Company Name<br>
-        Street Name & Number<br>
-        Town<br>
-        Postcode/Zip<br>
+          <p>
+            Company Name<br>
+            Street Name & Number<br>
+            Town<br>
+            Postcode/Zip
+          </p>
         Tel: xxxxx xxxxxxxxxx<br>
         Fax: xxxxx xxxxxxxxxx<br>
         Email: contact@mydomain.com
@@ -164,7 +166,7 @@
       </div>
 
       <div>
-        <span class="title_footer">Quick Links</span>
+        <h4 class="title_footer">Quick Links</h4>
         <a href="#">Link Text Here</a><hr>
         <a href="#">Link Text Here</a><hr>
         <a href="#">Link Text Here</a><hr>
@@ -172,7 +174,7 @@
       </div>
 
       <div>
-        <span class="title_footer">From The Blog</span>
+        <h4 class="title_footer">From The Blog</h4>
         <span>
           <b>Blog Post Title</b><br>
           Posted by Admin on 00.00.0000<br>
@@ -182,8 +184,8 @@
       </div>
 
       <div>
-        <span class="title_footer">Grab Our Newsletter</span>
-        <form class="newsletter" action="" method="post">
+        <h4 class="title_footer">Grab Our Newsletter</h4>
+        <form class="newsletter" action="#" method="post">
           <input type="text" name="name" value="Name">
           <input type="email" name="email" value="Email">
           <button type="send" name="button">SUBMIT</button>
