--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <form action="#" method="post" style="display: contents;">
           <div class="input_form">
             <input type="text" name="search" value="Search Term Here">
-            <button type="send" name="button">
+            <button type="button" name="button">
               <img src="img/search.png" alt="поиск" width="8" height="8">
             </button>
           </div>
@@ -43,7 +43,7 @@
     <!-- сервисы -->
     <div class="services">
       <div class="el_service">
-        <img src="img/service.jpg" alt="img" width="100" height="100">
+        <img src="img/service.png" alt="img" width="100" height="100">
         <span>
           <span>Service 1</span>
           <hr>
@@ -52,7 +52,7 @@
       </div>
 
       <div class="el_service">
-        <img src="img/service.jpg" alt="img" width="100" height="100">
+        <img src="img/service.png" alt="img" width="100" height="100">
         <span>
           <span>Service 2</span>
           <hr>
@@ -61,7 +61,7 @@
       </div>
 
       <div class="el_service">
-        <img src="img/service.jpg" alt="img" width="100" height="100">
+        <img src="img/service.png" alt="img" width="100" height="100">
         <span>
           <span>Service 3</span>
           <hr>
@@ -76,7 +76,7 @@
 
         <div class="el_latest_work">
           <div style="display:grid;">
-            <img src="img/latest_work.jpg" alt="изображение" width="300" height="170">
+            <img src="img/latest_work1.jpg" alt="изображение" width="300" height="170">
               <div class="title_latest_work">
                 <span>
                   Image Name or Title<br>
@@ -88,7 +88,7 @@
 
         <div class="el_latest_work">
           <div style="display:grid;">
-            <img src="img/latest_work.jpg" alt="изображение" width="300" height="170">
+            <img src="img/latest_work2.jpg" alt="изображение" width="300" height="170">
               <div class="title_latest_work">
                 <span>
                   Image Name or Title<br>
@@ -100,7 +100,7 @@
 
         <div class="el_latest_work">
           <div style="display:grid;">
-            <img src="img/latest_work.jpg" alt="изображение" width="300" height="170">
+            <img src="img/latest_work3.jpg" alt="изображение" width="300" height="170">
               <div class="title_latest_work">
                 <span>
                   Image Name or Title<br>
@@ -112,7 +112,7 @@
 
         <div class="el_latest_work">
           <div style="display:grid;">
-            <img src="img/latest_work.jpg" alt="изображение" width="300" height="170">
+            <img src="img/latest_work4.jpg" alt="изображение" width="300" height="170">
               <div class="title_latest_work">
                 <span>
                   Image Name or Title<br>
@@ -124,7 +124,7 @@
 
         <div class="el_latest_work">
           <div style="display:grid;">
-            <img src="img/latest_work.jpg" alt="изображение" width="300" height="170">
+            <img src="img/latest_work5.jpg" alt="изображение" width="300" height="170">
               <div class="title_latest_work">
                 <span>
                   Image Name or Title<br>
@@ -136,7 +136,7 @@
 
         <div class="el_latest_work">
           <div style="display:grid;">
-            <img src="img/latest_work.jpg" alt="изображение" width="300" height="170">
+            <img src="img/latest_work6.jpg" alt="изображение" width="300" height="170">
               <div class="title_latest_work">
                 <span>
                   Image Name or Title<br>
@@ -159,18 +159,18 @@
             Town<br>
             Postcode/Zip
           </p>
-        Tel: xxxxx xxxxxxxxxx<br>
-        Fax: xxxxx xxxxxxxxxx<br>
-        Email: contact@mydomain.com
+            Tel: xxxxx xxxxxxxxxx<br>
+            Fax: xxxxx xxxxxxxxxx<br>
+            Email: contact@mydomain.com
       </span>
       </div>
 
       <div>
         <h4 class="title_footer">Quick Links</h4>
-        <a href="#">Link Text Here</a><hr>
-        <a href="#">Link Text Here</a><hr>
-        <a href="#">Link Text Here</a><hr>
-        <a href="#">Link Text Here</a><hr>
+        <a href="#">Link Text Here</a><hr style="color: rgb(196, 196, 196);">
+        <a href="#">Link Text Here</a><hr style="color: rgb(196, 196, 196);">
+        <a href="#">Link Text Here</a><hr style="color: rgb(196, 196, 196);">
+        <a href="#">Link Text Here</a><hr style="color: rgb(196, 196, 196);">
       </div>
 
       <div>
@@ -188,7 +188,7 @@
         <form class="newsletter" action="#" method="post">
           <input type="text" name="name" value="Name">
           <input type="email" name="email" value="Email">
-          <button type="send" name="button">SUBMIT</button>
+          <button type="button" name="button">SUBMIT</button>
         </form>
       </div>
     </footer>
